--- a/Interface.kv
+++ b/Interface.kv
@@ -9,6 +9,7 @@ ScreenManager:
         name: 'ResultsScreen'
         manager: screen_manager
         label_text: user_screen.text
+        dpricetext: user_screen.dpricetext
 
 <UserScreen>:
     on_enter:
@@ -29,9 +30,9 @@ ScreenManager:
             size_hint_y: None
             canvas:
                 Color:
-                    rgba: 0, 0, 0, 1
+                    rgba: 0.5, 0.2, 0, 1
                 Rectangle:
-                    size: 10, 10
+                    size: self.size
 
         BoxLayout:
             orientation: 'horizontal'
@@ -94,15 +95,29 @@ ScreenManager:
                 on_press: root.submit()
                 id: submit
 <ResultsScreen>:
-
     BoxLayout:
+        canvas.before:
+            Color:
+                rgba: 0.3, 0.85, 0.7, 0.7
+            Rectangle:
+                size: self.size
+                pos: self.pos
         orientation: 'vertical'
         Label:
+            id: result
             text: root.label_text
             font_size: 50
             size: self.texture_size
+        BoxLayout:
+            orientation: 'horizontal'
+            Label:
+                text: "Change from desired price to prediction price"
 
-        Button:
+            Label:
+                text: root.dpricetext
+                font_size: 50
+                size: self.texture_size
+        Button:            
             text:"Return"
             size_hint_y:None
             on_press: root.manager.current = 'UserScreen'
